[tool.poetry]
name = "vqe"
version = "0.1.0"
description = ""
authors = ["Edgar Quiroz <eq24f02@protonma.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.21"
qiskit = "^0.21.0"
matplotlib = "^3.3.2"
notebook = "^6.1.4"
pylatexenc = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
